<resources>
    <string name="app_name">ShoeStore</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="Sign_up">Sign Up</string>
    <string name="enterEmailHint">Enter Your Email</string>
    <string name="enterPasswordHint">Enter Your Password</string>
    <string name="loginBottonText">Login</string>
    <string name="signup">Signup</string>
</resources>
